--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 ---
 layout: home
 header:
-  image: /assets/images/cradle_path.jpg
+  image: /assets/images/beech_forest2.png
 author_profile: true
 entries_layout: grid
 ---
+
