--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 ---
 layout: home
 header:
-  image: /assets/images/beech_forest2.png
+  overlay_image: /assets/images/beech_forest2.png
+  overlay_filter: 0.15
+  caption: #"Find your path, Cradle National Park"
+  actions:
+    - label: #"Happy trails"
+      url: #"https://parks.tas.gov.au/explore-our-parks/cradle-mountain/overland-track"
 author_profile: true
 entries_layout: grid
 ---
