--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@ layout: home
 header:
   overlay_image: /assets/images/beech_forest2.png
   overlay_filter: 0.15
-  caption: #"Find your path, Cradle National Park"
+  caption: "Tree network, Redwoods Forest"
   actions:
-    - label: #"Happy trails"
-      url: #"https://parks.tas.gov.au/explore-our-parks/cradle-mountain/overland-track"
+    - label: "Giant Eucalyptus & Sequoia"
+      url: "https://www.australiangeographic.com.au/topics/science-environment/2013/02/australias-tallest-trees/"
 author_profile: true
-entries_layout: grid
+#entries_layout: grid
 ---
 
