--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 ---
 layout: home
+title: "Welcome"
+excerpt: "You have safely landed"
 header:
   overlay_image: /assets/images/beech_forest2.png
   overlay_filter: 0.15
